# Lean-Mirror

backend/: .gitignore  Cargo.toml  config.example.toml
backend/src/config/: mod.rs
backend/src/manager/: error.rs  event.rs  executor.rs  manager.rs  mod.rs  queue.rs  status.rs
frontend/: package.json  pnpm-lock.yaml
