[package]
name = "lean_mirror_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
chrono-tz = { version = "0.10.4", features = ["serde"]}
chrono = { version = "0.4.44", features = ["serde"]}
serde_with = { version = "3.18.0", features = ["chrono"]}
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
